# docs/swagger.json
@@ -136,6 +136,15 @@
                         "name": "commentId",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "update comment",
+                        "name": "models.InputComment",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.InputComment"
+                        }
                     }
                 ],
                 "responses": {
@@ -477,6 +486,15 @@
                         "name": "socialmediaId",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "update socialmedia",
+                        "name": "models.InputSocialMedia",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.InputSocialMedia"
+                        }
                     }
                 ],
                 "responses": {
